# degenerator

./: .gitignore  .prettierrc  Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  recover.json  ticket-2293.txt  turbo.json
.turbo/cache/: c93c26e97866b383-meta.json  c93c26e97866b383.tar.zst
.turbo/daemon/: b9a945f2a9d79868-turbo.log.2024-08-26
app/: .env  .prettierrc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/actions/: accounts.ts  balance.ts  clmm.ts  cpmm.ts  create_pool.ts  create_spl_token.ts  deposit.ts  dlmm.ts  featured_tokens.ts  fee_tier.ts  generated.ts  mint_list.ts  mint_token.ts  quote_token.ts  token_account_data.ts
app/app/comps/: _icon.tsx  background.tsx  bars.tsx  button.tsx  check_box.tsx  checkbox.tsx  clmm.tsx  clmm_button.tsx  clmm_form.tsx  clmm_inputs.tsx  cpmm.tsx  error_message.tsx  external_link.tsx  fee_dropdown.tsx  field.tsx  footer.tsx  form.tsx  generated_tokens.tsx  header.tsx  image_chooser.tsx  initial_price.tsx  input.tsx  (+24 more)
app/prisma/: schema.prisma
apps/web/: auth.config.ts  auth.ts  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
programs/degenerator/: Cargo.toml
programs/degenerator/src/: lib.rs
programs/degenerator/src/instructions/: close_mint.rs  create_account.rs  create_ata.rs  create_pool.rs  initialize.rs  mint.rs  mint_token.rs  mod.rs  remove_key.rs  revoke_freeze.rs  revoke_mint.rs  update_authority.rs  update_field.rs
tests/: degenerator.ts  utils.ts
(+156 files in other folders)
